# Modele_scoring_MLFlow

./: .gitignore  README.md  pyproject.toml
notebooks/: notebook_3_modelisation.ipynb  notebook_4_modelisation_cout_metier.ipynb
src/: build_dataset.py  data_cleaning.py  feature_aggregations.py  impute_numeric_only.py  prepare_application_data.py
